add information about Fragments

--- a/pr.tex
+++ b/pr.tex
@@ -454,7 +454,8 @@ getContext().getContentResolver().notifyChange(uri, null);
 
 \section{Fragments}
     \begin{itemize}
-        \item Весь UI в большинстве приложений распихан по фрагментам.
+	\item Весь UI в большинстве приложений распихан по фрагментам.
+	\item Подробнее про Фрагменты можно почитать тут: \href{http://developer.alexanderklimov.ru/android/theory/fragments.php}{тык}
     \end{itemize}
 \section{ListView \& Adapter}   
     ListView и Adapter - это в некотором смысле андроидовская реализация того, что называют Model-View Controller.
